[gd_scene load_steps=6 format=2]

[ext_resource path="res://common/gamePad/navigation/joystick-small.png" type="Texture" id=1]
[ext_resource path="res://common/gamePad/navigation/joystick-big.png" type="Texture" id=2]
[ext_resource path="res://common/gamePad/navigation.gd" type="Script" id=3]
[ext_resource path="res://common/gamePad/navigation/joystick-big.gd" type="Script" id=4]
[ext_resource path="res://common/gamePad/navigation/button.gd" type="Script" id=5]

[node name="navigation" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="joystick-big" type="Sprite" parent="."]
visible = false
position = Vector2( 72.2796, 522.227 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="joystick-small" type="Sprite" parent="joystick-big"]
position = Vector2( 0, 2.52267 )
texture = ExtResource( 1 )

[node name="joystick-big2" type="Sprite" parent="."]
position = Vector2( 763.716, 525.594 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="joystick-small" type="Sprite" parent="joystick-big2"]
position = Vector2( 0, 2.52267 )
texture = ExtResource( 1 )

[node name="buttonA" type="Sprite" parent="."]
position = Vector2( 891.032, 555.279 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="buttonA"]

[node name="Label" type="Label" parent="buttonA"]
margin_left = -5.0
margin_top = -6.0
margin_right = 35.0
margin_bottom = 8.0
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonB" type="Sprite" parent="."]
position = Vector2( 984.37, 555.279 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="buttonB"]

[node name="Label" type="Label" parent="buttonB"]
margin_left = -4.0
margin_top = -5.0
margin_right = 36.0
margin_bottom = 9.0
text = "B"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nav" type="Node2D" parent="."]

[node name="down" type="Sprite" parent="nav"]
position = Vector2( 116.482, 560.891 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="nav/down"]

[node name="up" type="Sprite" parent="nav"]
position = Vector2( 116.482, 439.891 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="nav/up"]

[node name="left" type="Sprite" parent="nav"]
position = Vector2( 37, 499 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="nav/left"]

[node name="right" type="Sprite" parent="nav"]
position = Vector2( 192, 499 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="nav/right"]
[connection signal="moveJoystick" from="joystick-big" to="." method="_on_joystickbig_moveJoystick"]
[connection signal="moveJoystick" from="joystick-big2" to="." method="_on_joystickbig2_moveJoystick"]
[connection signal="pushButton" from="buttonA" to="." method="_on_buttonA_pushButton"]
[connection signal="releaseButton" from="buttonA" to="." method="_on_buttonA_releaseButton"]
[connection signal="pushButton" from="buttonB" to="." method="_on_buttonB_pushButton"]
[connection signal="releaseButton" from="buttonB" to="." method="_on_buttonB_releaseButton"]
[connection signal="pushButton" from="nav/down" to="." method="_on_down_pushButton"]
[connection signal="pushButton" from="nav/up" to="." method="_on_up_pushButton"]
[connection signal="pushButton" from="nav/left" to="." method="_on_left_pushButton"]
[connection signal="pushButton" from="nav/right" to="." method="_on_right_pushButton"]
